@@ -1,5 +1,8 @@
 2007-01-08  Paul Fitzpatrick  <paulfitz@alum.mit.edu>
 
+	* src/libYARP_OS/src/PortCoreInputUnit.cpp: Allowed ports to
+	pass on interrupt signal.
+
 	* src/libYARP_dev/src/opencv_grabber: Made driver pay attention 
 	to width, height.
 
